<?xml version="1.0"?>
<package format="3">
  <name>stardust_offboard</name>
  <version>0.0.1</version>
  <description>IRoC-U Qualification Offboard Control</description>

  <maintainer email="team@stardust.com">Team Stardust</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 
